--- a/sections/_projetos.scss
+++ b/sections/_projetos.scss
@@ -2,10 +2,13 @@
 
 #projetos {
     background-color: $color-bg;
-    padding: 5rem 2rem 0rem 2rem;
+    padding: 5rem 5rem;
     h1 {
-        font-size: 3rem;
+        font-size: 2rem;
         margin-bottom: 2rem;
+        color: #fff;
+        text-transform: uppercase;
+        font-family: 'Righteous', sans-serif;
     }
     .linebreak {
         height: 2px;
@@ -20,8 +23,10 @@
         width: 100%;
 
         .projeto {
-            width: 47%;
+            width: 30%;
             margin-bottom: 5rem;
+            display: flex;
+            flex-direction: column;
             .photoprojeto {
                 position: relative;
                 overflow: hidden;
@@ -46,16 +51,59 @@
                     }
                 }
             }
-
-            .textprojeto {
+            .contentimg {
                 display: flex;
                 justify-content: space-between;
-                margin-top: 1rem;
-                h3 {
-                    font-size: 1.5rem;
+                align-items: center;
+                width: 100%;
+                padding: 1.5rem 0rem;
+                .menutabsimgs {
+                    display: flex;
+                    gap: 20px;
+                    span {
+                        width: 10px;
+                        height: 10px;
+                        background-color: #fff;
+                    }
                 }
-                a {
-                    font-size: 1.5rem;
+            }
+            .infosprojeto {
+                display: flex;
+                justify-content: space-between;
+                margin-top: 2.5rem;
+                .linkstoprojects {
+                    h3 {
+                        font-size: 1.5rem;
+                        margin-bottom: 2rem;
+                    }
+                    a {
+                        font-size: .8rem;
+                        background-color: #181818;
+                        padding: 1rem 2rem;
+                        color: #fff;
+                        background-image: linear-gradient(rgba(255,255,255,.1), #0e0e0e00,#0e0e0e00, #0e0e0e00);
+                    }
+                    .repositorylink {
+                        margin-top: 1rem;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        gap: 30px;
+                        background-color: #181818;
+                        padding: 1rem;
+                        color: #fff;
+                        background-image: linear-gradient(rgba(255,255,255,.1), #0e0e0e00,#0e0e0e00, #0e0e0e00);
+                        max-width: 180px;
+                        p {
+                            color: #ffffff;
+                        }
+                    }
+                }
+                .descriptionprojects {
+                    p {
+                        max-width: 30ch;
+                        text-align: left;
+                    }
                 }
             }
         }
