feat: adjusts to size

--- a/components/_main.scss
+++ b/components/_main.scss
@@ -44,8 +44,8 @@ main {
             .textcircle {
                 height: 130px;
                 position: absolute;
-                bottom: 5%;
-                right: 3%;
+                bottom: 7%;
+                left: 3%;
                 animation: rotateAnimation infinite 7s linear;
             }
         }
