--- a/sections/_about.scss
+++ b/sections/_about.scss
@@ -2,33 +2,38 @@
 
 #sobre {
     background-color: $color-bg;
-    padding: 5rem 5rem;
     position: relative;
-    h1 {
-        font-size: 2rem;
-        margin-bottom: 2rem;
-        color: #fff;
-        text-transform: uppercase;
-        font-family: 'Righteous', sans-serif;
-    }
-    p {
-        max-width: 75ch;
-        margin: 10px 0;
-    }
-    .arrowtoinfo {
-        display: flex;
-        align-items: center;
-        gap: 60px;
-        .arrow {
-            transform: rotate(90deg);
+    .textsobre {
+        max-width: 1250px;
+        width: 100%;
+        margin: 0 auto;
+        padding: 5rem 1.5rem;
+        h1 {
+            font-size: 2rem;
+            margin-bottom: 2rem;
+            color: #fff;
+            text-transform: uppercase;
+            font-family: 'Righteous', sans-serif;
         }
-    }
-    .myphoto {
-        width: 200px;
-        margin: 3rem 0rem;
-        position: absolute;
-        left: 50%;
-        top: 0;
+        p {
+            max-width: 75ch;
+            margin: 10px 0;
+        }
+        .arrowtoinfo {
+            display: flex;
+            align-items: center;
+            gap: 60px;
+            .arrow {
+                transform: rotate(90deg);
+            }
+        }
+        .myphoto {
+            width: 250px;
+            margin: 3rem 0rem;
+            position: absolute;
+            left: 50%;
+            top: 20%;
+        }
     }
 }
 
