--- a/sections/_contact.scss
+++ b/sections/_contact.scss
@@ -2,88 +2,86 @@
 
 #contato {
     height: 60vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: $color-bg;
-    padding: 5rem 5rem;
-    display: flex;
-    .sobrecontato {
-        width: 50%;
-        h1 {
-            font-size: 2rem;
-            margin-bottom: 2rem;
-            color: #fff;
-            text-transform: uppercase;
-            font-family: 'Righteous', sans-serif;
-        }
-    }
-    .container-form {
-        width: 50%;
-        h1 {
-            text-align: center;
-            font-size: 2.5rem;
-            margin-bottom: 3rem;
-        }
-        .form-style {
-            display: flex;
-            flex-direction: column;
-            align-items: left;
-            .label-form {
-                margin-bottom: 7px;
+    .contactsize {
+        max-width: 1250px;
+        width: 100%;
+        margin: 0 auto;
+        padding: 0rem 1.5rem;
+
+        display: flex;
+        .sobrecontato {
+            width: 30%;
+            h1 {
+                font-size: 2rem;
+                margin-bottom: 2rem;
+                color: #fff;
+                text-transform: uppercase;
+                font-family: 'Righteous', sans-serif;
             }
-            .input-style,
-            .textarea-style, .textarea {
-                width: 100%;
-                border: 0;
-                padding: 0.6em;
-                padding-left: 0;
-                position: relative;
-                color: currentColor;
-                background: transparent;
-                border-bottom: 1px solid currentColor;
-            }
-            .name-email {
+        }
+        .container-form {
+            width: 100%;
+            .form-style {
                 display: flex;
-                gap: 50px;
-                justify-content: space-between;
-                .every-input {
-                    display: flex;
-                    flex-direction: column;
+                flex-direction: column;
+                align-items: left;
+                .label-form {
+                    margin-bottom: 7px;
+                }
+                .input-style,
+                .textarea-style, .textarea {
                     width: 100%;
-                    .input-style {
-                        height: 40px;
+                    border: 0;
+                    padding: 0.6em;
+                    padding-left: 0;
+                    position: relative;
+                    color: currentColor;
+                    background: transparent;
+                    border-bottom: 1px solid currentColor;
+                }
+                .name-email {
+                    display: flex;
+                    gap: 50px;
+                    justify-content: space-between;
+                    .every-input {
+                        display: flex;
+                        flex-direction: column;
                         width: 100%;
-                        padding: 15px 8px;
+                        .input-style {
+                            height: 40px;
+                            width: 100%;
+                            padding: 15px 8px;
+                        }
+                    } 
+                }
+                .message {
+                    margin-top: 3rem;
+                    .textarea {
+                        padding: .6rem;
+                        height: 100px;
+                        padding-bottom: 3.5rem;
                     }
-                } 
-            }
-            .message {
-                margin-top: 3rem;
-                .textarea {
-                    padding: .6rem;
-                    height: 100px;
-                    padding-bottom: 3.5rem;
+                }
+                .button-submit-form {
+                    height: 34px;
+                    border-radius: 4px;
+                    border: 0;
+                    cursor: pointer;
+                    background-color: #3f3f3f;
+                    font-size: 1rem;
+                    margin: 0 auto;
+                    width: 30%;
+                    color: #fff;
                 }
             }
-            .button-submit-form {
-                height: 34px;
-                border-radius: 4px;
-                border: 0;
-                cursor: pointer;
-                background-color: #3f3f3f;
-                font-size: 1rem;
-                margin: 0 auto;
-                width: 30%;
-                color: #fff;
-            }
         }
-    }
-    @media (max-width: 600px) {
-      .container-form .form-style .name-email {
-        flex-direction: column;
-        gap: 0px;
-      }
+        @media (max-width: 600px) {
+          .container-form .form-style .name-email {
+            flex-direction: column;
+            gap: 0px;
+          }
+        }
     }
   }
   
