--- a/sections/_skills.scss
+++ b/sections/_skills.scss
@@ -3,6 +3,11 @@
 #skills {
     background-color: $color-bg;
     padding: 5rem 5rem;
+    .textskill {
+        max-width: 1250px;
+        width: 100%;
+        margin: 0 auto;
+        padding: 5rem 1.5rem;
         h1 {
             font-size: 2rem;
             margin-bottom: 2rem;
@@ -44,6 +49,7 @@
                 }
             }
         }
+    }
     }
 
 @keyframes animationText {
