--- a/sections/_contact.scss
+++ b/sections/_contact.scss
@@ -3,6 +3,8 @@
 #contato {
     height: 60vh;
     background-color: $color-bg;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
     .contactsize {
         max-width: 1250px;
         width: 100%;
