--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,10 +48,16 @@
   font-size: 1rem;
 }
 
-body {
+.interface {
+  height: 100vh;
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
   padding: 13px;
-  border-radius: 15px;
-  background-color: #fff;
+}
+.interface section {
+  height: 100vh;
+  width: 100%;
+  scroll-snap-align: start;
 }
 
 .sectionanima {
@@ -283,10 +289,16 @@ header .headersize .disponiveltowork span {
   font-size: 1rem;
 }
 
-body {
+.interface {
+  height: 100vh;
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
   padding: 13px;
-  border-radius: 15px;
-  background-color: #fff;
+}
+.interface section {
+  height: 100vh;
+  width: 100%;
+  scroll-snap-align: start;
 }
 
 .sectionanima {
@@ -407,6 +419,8 @@ main .mainsize .textmain .textcircle {
 header .headersize .menuhamburger.ativo {
   z-index: 888;
   animation: opacityHeadeer 0.2s forwards;
+  position: fixed;
+  left: 50%;
 }
 header .headersize .menuhamburger.ativo span:nth-child(1) {
   width: 40px;
@@ -620,6 +634,8 @@ header .headersize .menuhamburger.ativo .bar:nth-child(1) {
 #contato {
   height: 60vh;
   background-color: #0b0b0b;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 #contato .contactsize {
   max-width: 1250px;
