feat: photos adjusts and animation

--- a/sections/_about.scss
+++ b/sections/_about.scss
@@ -2,11 +2,13 @@
 
 #sobre {
     background-color: $color-bg;
-    padding: 5rem 5rem;
+    padding: 0rem 5rem;
+    display: flex;
     .textsobre {
         display: flex;
         justify-content: space-between;
         width: 100%;
+        padding-top: 5rem;
         h1 {
             font-size: 2rem;
             margin-bottom: 2rem;
@@ -15,7 +17,7 @@
             font-family: 'Righteous', sans-serif;
         }
         p {
-            max-width: 75ch;
+            max-width: 140ch;
             margin: 10px 0;
         }
         .arrowtoinfo {
@@ -28,11 +30,12 @@
         }
         .imgsaboutme {
             position: relative;
+            width: 100%;
             img {
                 position: absolute;
                 width: 200px;
                 right: 0;
-                top: 20px;
+                animation: bounceUpDown 2s infinite;
                 &:nth-child(1) {
                     top: 560px;
                     right: 50px;
@@ -76,13 +79,19 @@
                 }
                 &:nth-child(9) {
                     top: 450px;
-                    right: 450px;
+                    right: 250px;
                     z-index: 100;
                 }
                 &:nth-child(10) {
-                    top: 320px;
-                    right: 200px;
+                    top: 450px;
+                    right: 530px;
                     z-index: 10;
+                }
+                &:nth-child(11) {
+                    top: 20px;
+                    right: 220px;
+                    z-index: 10;
+                    width: 140px;
                 }
             }
         }
@@ -104,4 +113,13 @@
 
 .myphoto.moveright {
     animation: moveRight 1.8s forwards;
+}
+
+@keyframes bounceUpDown {
+    0%, 100% {
+        transform: translateY(0); // Posição inicial
+    }
+    50% {
+        transform: translateY(-15px); // Move para cima
+    }
 }
